--- a/index.html
+++ b/index.html
@@ -10,35 +10,47 @@
   
   <title>Frontend Mentor | Intro component with sign up form</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-
-  </style>
 </head>
 <body>
+    <div class="container">
 
-  Learn to code by watching others
+        <div class="text-copy">
+            <h1>Learn to code by watching others</h1>
+            <p>
+                See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+                but understanding how developers think is invaluable. 
+            </p>
+        </div>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+        <div class="signup">
+            <div class="pricing">
+                <p>
+                    <span>Try it free 7 days</span> then $20/mo. thereafter
+                </p>
+            </div>
+            <div class="form">
+                <form action="">
+                    <label for="first-name">First Name</label>
+                     <input type="text" name="first-name" id="first-name" required placeholder="First Name">
+                     <label for="last-name">Last Name </label>
+                     <input type="text" name="last-name" id="last-name" required placeholder="Last Name">
+                     <label for="email-address">Email Address</label>
+                     <input type="email" name="email-address" id="email-address" required placeholder="Email Address">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password" placeholder="Password" required>
+                    <input type="submit" id="submit" value="Claim your free trial">
+                </form>
+                <p class="terms">By clicking the button, you are agreeing to our <a>Terms and Services</a></p>
+            </div>
+        </div>
+        
+        <footer>
+            <p class="attribution">
+                Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+                Coded by <a href="https://github.com/meilani">meilani</a>.
+            </p>
+        </footer>
+    </div>
   <script src="./js/app.js"></script>
 </body>
 </html>
